# Steam-Shortcut-Generator

./: README.md  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
src/: App.vue  main.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CreateDialog.vue  LocalGameGenerator.vue  SearchResult.vue  SteamBrowser.vue
src/components/browser/: CreateShortcut.vue  Main.vue  SearchResult.vue
src/components/editor/: Main.vue
src/components/local/: Main.vue
src/components/settings/: LocalFolderOption.vue  Main.vue  PrefferedPlayer.vue  SteamFolderOption.vue  SteamFormatOption.vue  ThemeOption.vue
src/components/shared/: SharedImporter.vue  SteamIcon.vue  Taskbar.vue
src/states/: Browser.ts  Editor.ts  Library.ts  Main.ts  SelectedGame.ts
src/types/: Editor.ts  GameDetails.ts  Library.ts  SearchResults.ts  Settings.ts
src/utils/: GenerateShortcut.ts  SettingsManager.ts  ShortcutsLibrary.ts  SteamApi.ts
